--- a/online-website/signin-form.html
+++ b/online-website/signin-form.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <form action="">
-    <fieldset style="margin-left:300px;margin-right:300px;background-color:lightgoldenrodyellow;color: blue;border-radius: 10px;border-style:inset;border-color: brown;box-shadow: 10px 20px 5px lightpink;">
+    <fieldset style="margin-left:500px;margin-right:500px;background-color:lightblue;color: blue;border-radius: 10px;border-style:inset;border-color: brown;box-shadow: 10px 20px 5px black;">
         <legend style="color:crimson">SIGN IN</legend>
         <br>
         <label>USER NAME</label><br>
