--- a/online-website/signup-form.html
+++ b/online-website/signup-form.html
@@ -10,7 +10,7 @@
 <body>
     <h1 style="text-align:center;">SIGN UP</h1>
     <form action="">
-        <fieldset style="margin-left:300px;margin-right:300px;background-color:lightgoldenrodyellow;color: blue;border-radius: 10px;border-style:inset;border-color: brown;box-shadow: 10px 20px 5px lightpink;">
+        <fieldset style="margin-left:500px;margin-right:500px;background-color:lightblue;color: blue;border-radius: 10px;border-style:inset;border-color: brown;box-shadow: 10px 20px 5px black;">
             <legend style="color:crimson">Registration Details</legend>
             <label>First Name</label><br>
             <input type="text" name="fname" required><br>
